[package]
name = "txp"
version = "0.1.0"
authors = ["Waelwindows <waelwindows@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "txp"
crate-type = ["lib", "cdylib"]

[dependencies]
nom = "7.1.2"
image = { version = "0.23.4", optional = true }
ddsfile = { version = "0.5.1", optional = true }
dcv-color-primitives = { version = "0.1.9", optional = true }
pyo3 = { version = "0.17.3", optional = true, features = ["extension-module", "abi3-py37", "generate-import-lib"] }
tracing = "0.1.37"
pyo3-log = { version = "0.8.1", optional = true }

[dev-dependencies]
structopt = "0.3.14"
anyhow = "1.0.28"
tabwriter = "1.2.1"
tracing-subscriber = "0.3.17"

[[example]]
name = "extract"
required-features = ["image", "ddsfile"]

[features]
default = ["ddsfile"]
pyo3 = ["dep:pyo3", "pyo3-log", "tracing/log"]
